--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,41 @@
+div {
+    margin: 1px;
+    padding: 1px 0px 0px 0px;
+    border: transparent 0px solid;
+    border-left-width: 3px;
+    width: 300px;
+}
+
 div.macro {
-    padding: 3px;
-    border: 1px solid red;
+    border-color: red;
+    width: 298px;
 }
 
 div.meso {
-    padding: 3px;
-    border: 1px solid blue;
+    border-color: blue;
+    width: 294px;
 }
 
 div.micro {
-    padding: 3px;
-    border: 1px solid black;
-    background: repeating-linear-gradient(
-        -45deg,
-        #999,
-        #ccc 1px,
-        #ccc 5px,
-        #999 6px
-    );
+    border-color: green;
+    width: 290px;
+}
+
+div.exercise {
+    position: absolute;
+}
+
+div.exercise_set {
+    margin: 1px;
+    border-color: red;
+    width: 280px;
 }
 
 div.set {
-    display: block;
-    border: 1px none black;
-    border-top-style: dotted;
-
-}
-
-#deadlift {
-    background: rgb(200, 255, 200);
+    margin: 1px;
+    background: rgb(255, 200, 200, 0.5);
+    text-align: right;
+    width: 282px;
 }
 
 #squat {
@@ -37,7 +44,7 @@ div.set {
 
 body {
     font-family: Abel;
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
