--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,30 @@
-div.somethign {
+div.row {
     margin: 1px;
-    padding: 1px 0px 0px 0px;
-    border: transparent 0px solid;
-    border-left-width: 3px;
-    width: 300px;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+div[class*="exercise_"]{
+    margin: 3px 0px 0px 3px;
+    background: #78909c;
+}
+
+div.bench {
+    background: #4caf50;
+}
+
+div.squat {
+    background: #f44336;
+}
+
+div.deadlift {
+    background: #2196f3;
+}
+
+div.exercise {
+    left: 100;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
 }
 
 div.macro {
@@ -48,7 +69,7 @@ div.set {
     background: rgb(255, 200, 200);
 }
 
-body.somethign {
+body {
     font-family: Abel;
     font-size: 20px;
     font-style: normal;
