--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 div.row {
-    margin: 2px;
     background: rgba(255, 255, 255, 0.5);
 }
 
-div.exercise {
-    margin: 3px 0px 0px 0px;
-    background: darkgrey;
+div.col {
+    margin: 0px 0px 1px 0px;
+    background: lightgrey;
 }
+
 
 div.exercise_top {
     background: darkgrey;
